[gd_scene load_steps=19 format=2]

[ext_resource path="res://game/Hud/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://game/Hud/ButtonSample.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/font/zig_____.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/animals/carpincho_16bits.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=17]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/CarpinchoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect/CarpinchoSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect/CarpinchoSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect/CarpinchoSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "await"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/CarpinchoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1, 1.5, 2, 2.5, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=15]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/CarpinchoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.311754 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 28 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect/CarpinchoSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 3.73213 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect/CarpinchoSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.311754 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect/CarpinchoSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Collision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "take_damage" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/CarpinchoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 17, 18 ]
}

[sub_resource type="Animation" id=16]
resource_name = "respawn"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/CarpinchoSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect/CarpinchoSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect/CarpinchoSprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "sit"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/CarpinchoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.80115 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 25, 26, 25 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk_back"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/CarpinchoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_front"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/CarpinchoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 29 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk_side"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/CarpinchoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 33, 35 ]
}

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.890196, 0.890196, 0.909804, 0.388235 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=18]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=19]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.207843, 0.188235, 0.188235, 0.490196 )

[node name="GameOverScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.00392157, 0.00392157, 0.368627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -216.0
margin_top = 30.0
margin_right = 216.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 17 )
text = "GAME OVER"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarpinchoSprite" type="Sprite" parent="ColorRect"]
z_index = 50
z_as_relative = false
texture = ExtResource( 4 )
flip_h = true
hframes = 4
vframes = 9
frame = 3
region_rect = Rect2( 0, 0, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
root_node = NodePath("../..")
autoplay = "idle"
anims/RESET = SubResource( 5 )
anims/await = SubResource( 9 )
anims/death = SubResource( 15 )
anims/idle = SubResource( 4 )
anims/respawn = SubResource( 16 )
anims/sit = SubResource( 10 )
anims/walk_back = SubResource( 7 )
anims/walk_front = SubResource( 6 )
anims/walk_side = SubResource( 8 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.968627, 0.686275, 0.411765, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -290.0
margin_right = 138.0
margin_bottom = -12.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 106.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Panel/VBoxContainer"]
margin_right = 240.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 18 )
text = "YOUR SCORE"
valign = 1

[node name="ShowScore" type="Label" parent="Panel/VBoxContainer"]
margin_top = 50.0
margin_right = 240.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 18 )
text = "YOUR SCORE"
valign = 1

[node name="YourName" type="Label" parent="Panel/VBoxContainer"]
margin_top = 100.0
margin_right = 240.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 18 )
text = "Your name:"
align = 1
valign = 1

[node name="InputName" type="LineEdit" parent="Panel/VBoxContainer"]
margin_top = 150.0
margin_right = 240.0
margin_bottom = 170.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
align = 1
max_length = 4
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 190.0
margin_right = 240.0
margin_bottom = 194.0

[node name="ButtonReturn" parent="Panel/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 214.0
margin_right = 240.0
margin_bottom = 235.0
text = "Return to menu"

[connection signal="text_entered" from="Panel/VBoxContainer/InputName" to="." method="_on_InputName_text_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonReturn" to="." method="_on_ButtonReturn_pressed"]
